--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-half-o"></i>
                             <h3>Dog Food Bone</h3>
-                            <h5>6.99€</h5>
+                            <h5>250 pesos</h5>
                         </div>
                     </div>
 
@@ -237,7 +237,7 @@
                             <i class="fa fa-star-half-o"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Dog Food</h3>
-                            <h5>15.99€</h5>
+                            <h5>369 pesos</h5>
                         </div>
                     </div>
 
@@ -263,7 +263,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <h3>Hamster Food</h3>
-                            <h5>9.99€</h5>
+                            <h5>299 pesos</h5>
                         </div>
                     </div>
 
@@ -289,7 +289,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Bird Food Balls</h3>
-                            <h5>5.99€</h5>
+                            <h5>250 pesos</h5>
                         </div>
                     </div>
                 </div>
@@ -325,7 +325,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Dog Toy Spidey</h3>
-                            <h5>9.99€</h5>
+                            <h5>350 pesos</h5>
                         </div>
                     </div>
 
@@ -351,7 +351,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <h3>Dog Toy Bone</h3>
-                            <h5>7.99€</h5>
+                            <h5>345 pesos</h5>
                         </div>
                     </div>
 
@@ -377,7 +377,7 @@
                             <i class="fa fa-star-o"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Dog Toy Frisbee</h3>
-                            <h5>11.99€</h5>
+                            <h5>400 pesos</h5>
                         </div>
                     </div>
 
@@ -403,7 +403,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <h3>Dog Toy Banana</h3>
-                            <h5>4.99€</h5>
+                            <h5>240 pesos</h5>
                         </div>
                     </div>
                 </div>
@@ -431,7 +431,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Bird House Round</h3>
-                            <h5>18.99€</h5>
+                            <h5>399 pesos</h5>
                         </div>
                     </div>
 
@@ -457,7 +457,7 @@
                             <i class="fa fa-star-half-o"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Bird House Square</h3>
-                            <h5>13.99€</h5>
+                            <h5>399 pesos</h5>
                         </div>
                     </div>
 
@@ -483,7 +483,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-half-o"></i>
                             <h3>Bird House Yellow</h3>
-                            <h5>21.99€</h5>
+                            <h5>399 pesos</h5>
                         </div>
                     </div>
 
@@ -509,7 +509,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <h3>Bird Toy</h3>
-                            <h5>4.99€</h5>
+                            <h5>299 pesos</h5>
                         </div>
                     </div>
                 </div>
@@ -536,7 +536,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-half-o"></i>
                             <h3>Cat Toy Ball</h3>
-                            <h5>8.99€</h5>
+                            <h5>250 pesos</h5>
                         </div>
                     </div>
 
@@ -562,7 +562,7 @@
                             <i class="fa fa-star-o"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Cat Hanging Toy</h3>
-                            <h5>11.99€</h5>
+                            <h5>420 pesos</h5>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -587,7 +587,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-half-o"></i>
                             <h3>Bag for Cat</h3>
-                            <h5>29.99€</h5>
+                            <h5>460 pesos</h5>
                         </div>
                     </div>
                 </div>
@@ -623,7 +623,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star"></i>
                             <h3>Dog Banana Clothes</h3>
-                            <h5>19.99€</h5>
+                            <h5>550 pesos </h5>
                         </div>
                     </div>
 
@@ -649,7 +649,7 @@
                             <i class="fa fa-star-o"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Dog Mask</h3>
-                            <h5>4.99€</h5>
+                            <h5>250 pesos</h5>
                         </div>
                     </div>
 
@@ -675,7 +675,7 @@
                             <i class="fa fa-star-o"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Cat OldStyle Clothes</h3>
-                            <h5>14.99€</h5>
+                            <h5>570 pesos</h5>
                         </div>
                     </div>
                 </div>
@@ -711,7 +711,7 @@
                             <i class="fa fa-star-o"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Dog Mask</h3>
-                            <h5>4.99€</h5>
+                            <h5>250 pesos</h5>
                         </div>
                     </div>
 
@@ -737,7 +737,7 @@
                             <i class="fa fa-star"></i>
                             <i class="fa fa-star-o"></i>
                             <h3>Dog Medical Collar</h3>
-                            <h5>14.99€</h5>
+                            <h5>269 pesos</h5>
                         </div>
                     </div>
                 </div>
@@ -789,14 +789,6 @@
                         <input type="reset" value="&#xf1d8;">
                         <!--just to erase the email-->
                     </form>
-                </div>
-            </div>
-            <hr>
-            <p class="copyright">©2020 AniMall®</p>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
     </div>
 </body>
 
